--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -11,6 +11,7 @@ body {
   height: -webkit-fill-available;
   background-color: #e3e3e385;
   margin: 0rem;
+  overflow: hidden;
 }
 html {
   font-size: 16px;
